--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".view.MainActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".view.ItemDetailActivity"></activity>
+        <activity android:name=".view.ItemDetailActivity"/>
     </application>
 
 </manifest>
